--- a/front2.html
+++ b/front2.html
@@ -9,30 +9,40 @@
 
         <div id="screen">
 
-          <h1 id = "my-header">VEGI</h1>
+        <div class="head-bar1" overflow: auto;>
+        <h3 class="head_recipes"> search </h3>
+        <a href="front.html"><i class="material-icons md-3">arrow_back</i></a>
+        </div>
 
 			  <div class="al">
-				<a href="front2.html">
-          <div class="spinner1">
+				<a href="restaurant.html">
+          <div class="spinner3">
           <div class="double-bounce1"></div>
           <div class="double-bounce2"></div>
           <div class="double-bounce3"></div>
-					<i class="material-icons md-1">search</i>
+					<i class="material-icons md-6">restaurant</i>
           </div>
 				</a>
-        <a href="social.html">
-          <div class="spinner2">
+        <a href="recipes.html">
+          <div class="spinner4">
           <div class="double-bounce1"></div>
           <div class="double-bounce2"></div>
           <div class="double-bounce3"></div>
-					<i class="material-icons md-2">group</i>
+					<i class="material-icons md-4">fastfood</i>
           </div>
-				</a>
+        </a>
+
+
+          <div class="spinner5">
+          <div class="double-bounce1"></div>
+          <div class="double-bounce2"></div>
+          <div class="double-bounce3"></div>
+					<i class="material-icons md-5">local_florist</i>
+          </div>
+
 
 			  </div>
 
-        </div>
-        </div>
         </div>
    </body>
 </html>
