--- a/recipe1.html
+++ b/recipe1.html
@@ -9,16 +9,11 @@
         <div id="screen">
 
           <div class="head-bar1" overflow: auto;>
-            <h3 class="head_recipes"> recipes </h3>
-          <a href="front.html"><i class="material-icons md-3">arrow_back</i></a>
+            <h3 class="head_recipes"> recipe1 </h3>
+          <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
           </div>
 
-          <div class="search-bar">
-            <form class="form-search-bar">
-                <input type="text" placeholder="search for a recipe or restaurant">
-                <button type="submit"></button>
-            </form>
-          </div>
+
         </div>
    </body>
 </html>
