--- a/recipe1.html
+++ b/recipe1.html
@@ -6,14 +6,79 @@
       rel="stylesheet">
     </head>
     <body>
-        <div id="screen">
+        <div id="screen" style="overflow: auto;">
+          <div class="head-bar1">
+              <div class='back_button'>
+              <a href="recipes.html"><i class="material-icons md-3">arrow_back</i></a>
+              </div>
+              <div class="head_recipes">Vegan Lemon Bars</div>
+          </div>
 
-          <div class="head-bar1" overflow: auto;>
-            <h3 class="head_recipes"> recipe1 </h3>
-          <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
+          <img class="recipe_image" src="images/vegan-lemon-bars-1.jpg">
+          <div class="rating_bar"><b>Overall Rating:</b> 4.8/5</div>
+          <div class="rating_bar">
+            <div class="your_rating">Your Rating</div>
+            <i class="material-icons">star_border</i>
+            <i class="material-icons">star_border</i>
+            <i class="material-icons">star_border</i>
+            <i class="material-icons">star_border</i>
+            <i class="material-icons">star_border</i> 
+          </div>
+          <div class="rating_bar"> 
+          <div class="your_rating"><b>Prep Time:</b> 5 hours</div>
+          <div class="your_rating"><b>Cooking Time:</b> 45 Minutes</div>
+          <div class="your_rating"><b>Total Time:</b> 5 hours 45 minutes</div>
+          <div class="your_rating"><b>Servings:</b> 9 (numbers)</div>
+          <div class="your_rating"><b>Type:</b> Dessert</div>
+          </div>
+          <div class = "rating_bar"><b>Ingredients</b>
+                <div class="ingred_head"><b>Shortbread Crust</b></div>
+                    <div class="ingred_list">
+                     <ol>
+                        <li>1/2 cup vegan butter</li>
+                        <li>1/4 cup granulated sugar</li>
+                        <li>1 teaspoon lemon zest</li>
+                        <li>1 cup all-purpose flour</li>
+                     </ol>
+                    </div>
+
+                <div class="ingred_head"><b>Meyer Lemon Curd</b></div>
+                    <div class="ingred_list">
+                     <ol>
+                        <li>1 12 oz package extra firm silken tofu, liquid drained</li>
+                        <li>1/2 cup fresh Meyer lemon juice, 5-6 lemons</li>
+                        <li>1 teaspoon lemon zest</li>
+                        <li>1 cup granulated sugar</li>
+                        <li>1/4 cup powdered sugar</li>
+                        <li>2 tablespoons cornstarch</li>
+                        <li>1 teaspoon vanilla extract</li>
+                     </ol>
+                    </div>
           </div>
 
 
+          <div class = "rating_bar"><b>Instructions</b>
+                <div class="inst_head"><b>To make the crust</b></div>
+                    <div class="inst_list">
+                     <ol>
+                        <li>Preheat the oven to 350 degrees F. Line an 8x8 square baking pan with parchment paper and set aside.</li>                        
+                        <li>In a stand-up mixer with the paddle attachment, beat the butter, sugar, and lemon zest together until smooth and creamy. Add flour and mix until well incorporated.</li>
+                        <li>Press the dough into the prepared pan and bake for 20 minutes until light golden brown. Remove from oven and let cool for at least 15 minutes.
+</li>
+                     </ol>
+                    </div>
+                <div class="inst_head"><b>To make the Lemon Curd</b></div>
+                    <div class="inst_list">
+                     <ol>
+                        <li>In a food processor combine tofu, lemon juice, zest, and granulated sugar and process until smooth and creamy, scraping down the sides as necessary.</li>                        
+                        <li>Add the powdered sugar, cornstarch, and vanilla extract and process again until combined.</li>
+                        <li>Pour into cooled crust and bake for another 25-30 minutes until lemon curd has set.</li>
+                        <li>Let cool at room temperature for 20 minutes and then place in the refrigerator to cool all the way.</li>
+                        <li>Dust with powdered sugar or candied lemon slices just before serving.</li>
+                     </ol>
+                    </div>
+          </div>
+  
         </div>
    </body>
 </html>
