--- a/recipes.html
+++ b/recipes.html
@@ -9,8 +9,8 @@
         <div id="screen">
 
           <div class="head-bar1" overflow: auto;>
-            <h3 class="head_recipes"> recipes </h3>
           <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
+            <h3 class="head_recipes"> Recipes </h3>
           </div>
 
           <div class="search-bar">
@@ -24,9 +24,9 @@
 
             <div class="search-result1">
                 <a href="recipe1.html">
-                <img class = "img" src="images/currents.jpg" alt="img1">
+                <img class = "img" src="images/vegan-lemon-bars-1.jpg" alt="img1">
                 </a>
-                <p class = "text1">"blabla"</p>
+                <p class = "text1">""</p>
             </div>
 
             <br>
