--- a/restaurant.html
+++ b/restaurant.html
@@ -24,24 +24,24 @@
 
             <div class="search-result1">
                 <a href="front.html">
-                <img class = "img" src="images/currents.jpg" alt="img1">
+                <img class = "img" src="images/restaurant1.jpg" alt="img1">
                 </a>
                 <p class = "text1">"blabla"</p>
             </div>
 
             <br>
             <div class="search-result2">
-                <img class = "img" src="images/currents.jpg" alt="img1">
+                <img class = "img" src="images/restaurant2.jpg" alt="img1">
                 <p class = "text2">"blabla"</p>
             </div>
             <br>
             <div class="search-result3">
-                <img class = "img" src="images/currents.jpg" alt="img1">
+                <img class = "img" src="images/restaurant3.jpg" alt="img1">
                 <p class = "text3">"blabla"</p>
             </div>
             <br>
             <div class="search-result4">
-                <img class = "img" src="images/currents.jpg" alt="img1">
+                <img class = "img" src="images/restaurant4.jpg" alt="img1">
                 <p class = "text3">"blabla"</p>
             </div>
           </div>
