--- a/recipes.html
+++ b/recipes.html
@@ -31,17 +31,17 @@
 
             <br>
             <div class="search-result2">
-                <img class = "img" src="images/currents.jpg" alt="img1">
+                <img class = "img" src="images/recipe4.jpg" alt="img1">
                 <p class = "text2">"blabla"</p>
             </div>
             <br>
             <div class="search-result3">
-                <img class = "img" src="images/currents.jpg" alt="img1">
+                <img class = "img" src="images/recipe2.jpg" alt="img1">
                 <p class = "text3">"blabla"</p>
             </div>
             <br>
             <div class="search-result4">
-                <img class = "img" src="images/currents.jpg" alt="img1">
+                <img class = "img" src="images/recipe3.jpg" alt="img1">
                 <p class = "text3">"blabla"</p>
             </div>
           </div>
