--- a/menu1.html
+++ b/menu1.html
@@ -10,19 +10,12 @@
 
           <div class="head-bar1" overflow: auto;>
           <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
-            <h3 class="head_recipes"> Recipes </h3>
-          </div>
-
-          <div class="search-bar">
-            <form class="form-search-bar">
-                <input type="text" placeholder="search for a recipe or restaurant">
-                <button type="submit"></button>
-            </form>
+            <h3 class="head_recipes"> menu </h3>
           </div>
 
           <div class="search-result">
 
-            <div class="search-result1">
+            <div class="search-result5">
                 <a href="recipe1.html">
                 <img class = "img" src="images/vegan-lemon-bars-1.jpg" alt="img1">
                 </a>
@@ -31,18 +24,22 @@
 
             <br>
             <div class="search-result2">
+                <img class = "img" src="images/recipe3.jpg" alt="img1">
+                <p class = "text3">Turkish Eggplant Casserole</p>
+            </div>
+            <br>
+            <div class="search-result3">
                 <img class = "img" src="images/recipe4.jpg" alt="img1">
                 <p class = "text3">tomato curry</p>
             </div>
             <br>
-            <div class="search-result3">
-                <img class = "img" src="images/recipe2.jpg" alt="img1">
-                <p class = "text3">Vege Noodles</p>
-            </div>
-            <br>
             <div class="search-result4">
-                <img class = "img" src="images/recipe3.jpg" alt="img1">
-                <p class = "text3">Turkish Eggplant Casserole</p>
+                <img class = "img" src="images/recipe5.jpg" alt="img1">
+                <p class = "text3">Spicy tomato Sandwich</p>
+            </div>
+            <div class="search-result6">
+                <img class = "img" src="images/recipe6.jpg" alt="img1">
+                <p class = "text3">special cheese curry</p>
             </div>
           </div>
         </div>
