--- a/restaurant.html
+++ b/restaurant.html
@@ -26,23 +26,23 @@
                 <a href="front.html">
                 <img class = "img" src="images/restaurant1.jpg" alt="img1">
                 </a>
-                <p class = "text1">"blabla"</p>
+                <p class = "text3">The Glass Onion</p>
             </div>
 
             <br>
             <div class="search-result2">
                 <img class = "img" src="images/restaurant2.jpg" alt="img1">
-                <p class = "text2">"blabla"</p>
+                <p class = "text3">He’s Not Here Bar</p>
             </div>
             <br>
             <div class="search-result3">
                 <img class = "img" src="images/restaurant3.jpg" alt="img1">
-                <p class = "text3">"blabla"</p>
+                <p class = "text3">Pita Pan</p>
             </div>
             <br>
             <div class="search-result4">
                 <img class = "img" src="images/restaurant4.jpg" alt="img1">
-                <p class = "text3">"blabla"</p>
+                <p class = "text3">Joe's Restaurant</p>
             </div>
           </div>
         </div>
