--- a/recipe1.html
+++ b/recipe1.html
@@ -11,74 +11,49 @@
               <div class='back_button'>
               <a href="recipes.html"><i class="material-icons md-3">arrow_back</i></a>
               </div>
-              <div class="head_recipes">Vegan Lemon Bars</div>
           </div>
 
-          <img class="recipe_image" src="images/vegan-lemon-bars-1.jpg">
-          <div class="rating_bar"><b>Overall Rating:</b> 4.8/5</div>
+          <div class="recipe">
+           <img class="recipe_image" src="images/vegan-lemon-bars-1.jpg">
+           <div class="rec_title"><strong>Vegan Lemon Bars</strong></div>
+          </div>
+
           <div class="rating_bar">
-            <div class="your_rating">Your Rating</div>
-            <i class="material-icons">star_border</i>
-            <i class="material-icons">star_border</i>
-            <i class="material-icons">star_border</i>
-            <i class="material-icons">star_border</i>
-            <i class="material-icons">star_border</i> 
+          <div class="nutrition-facts"><strong>Nutrition Facts</strong></div>
+          <div class="nutrition_base amount"><strong>Amount per Serving</strong></div>
+          <div class="nutrition_base"><strong>Calories</strong> 252</div>
+          <div class="nutrition_base">Calories from Fat 72</div>
+          <div class="nutrition_base daily_val"><span class="empty"></span><span class="nutrition_right">% Daily Value*<span></div>
+          <div class="nutrition_base"><span>Total Fat 8g</span> <span class="nutrition_right">12%</span></div>
+          <div class="nutrition_base"><span>Saturated Fat 2g</span> <span class="nutrition_right">10%</span></div>
+          <div class="nutrition_base"><span>Sodium 81mg</span> <span class="nutrition_right">3%</span></div>
+          <div class="nutrition_base"><span>Potassium 14mg</span> <span class="nutrition_right">0%</span></div>
+          <div class="nutrition_base"><span>Total Carbohydrates 43g</span> <span class="nutrition_right">0%</span></div>
+          <div class="nutrition_base"><span>Protein 1g</span> <span class="nutrition_right">2%</span></div>
+          <div class="nutrition_base"><span>Vitamin A</span> <span class="nutrition_right">9.6%</span></div>
+          <div class="nutrition_base"><span>Vitamin C</span> <span class="nutrition_right">0.7%</span></div>
+          <div class="nutrition_base"><span>Calcium</span> <span class="nutrition_right">0.2%</span></div>
+          <div class="nutrition_base"><span>Iron</span> <span class="nutrition_right">3.6%</span></div>   
           </div>
-          <div class="rating_bar"> 
-          <div class="your_rating"><b>Prep Time:</b> 5 hours</div>
-          <div class="your_rating"><b>Cooking Time:</b> 45 Minutes</div>
-          <div class="your_rating"><b>Total Time:</b> 5 hours 45 minutes</div>
-          <div class="your_rating"><b>Servings:</b> 9 (numbers)</div>
-          <div class="your_rating"><b>Type:</b> Dessert</div>
-          </div>
-          <div class = "rating_bar"><b>Ingredients</b>
-                <div class="ingred_head"><b>Shortbread Crust</b></div>
-                    <div class="ingred_list">
-                     <ol>
-                        <li>1/2 cup vegan butter</li>
-                        <li>1/4 cup granulated sugar</li>
-                        <li>1 teaspoon lemon zest</li>
-                        <li>1 cup all-purpose flour</li>
-                     </ol>
-                    </div>
+        <a style="text-decoration: none;" href="#">
+        <div class="rating_bar share">
+        Share
+        </div>
+        </a>
 
-                <div class="ingred_head"><b>Meyer Lemon Curd</b></div>
-                    <div class="ingred_list">
-                     <ol>
-                        <li>1 12 oz package extra firm silken tofu, liquid drained</li>
-                        <li>1/2 cup fresh Meyer lemon juice, 5-6 lemons</li>
-                        <li>1 teaspoon lemon zest</li>
-                        <li>1 cup granulated sugar</li>
-                        <li>1/4 cup powdered sugar</li>
-                        <li>2 tablespoons cornstarch</li>
-                        <li>1 teaspoon vanilla extract</li>
-                     </ol>
-                    </div>
-          </div>
-
-
-          <div class = "rating_bar"><b>Instructions</b>
-                <div class="inst_head"><b>To make the crust</b></div>
-                    <div class="inst_list">
-                     <ol>
-                        <li>Preheat the oven to 350 degrees F. Line an 8x8 square baking pan with parchment paper and set aside.</li>                        
-                        <li>In a stand-up mixer with the paddle attachment, beat the butter, sugar, and lemon zest together until smooth and creamy. Add flour and mix until well incorporated.</li>
-                        <li>Press the dough into the prepared pan and bake for 20 minutes until light golden brown. Remove from oven and let cool for at least 15 minutes.
-</li>
-                     </ol>
-                    </div>
-                <div class="inst_head"><b>To make the Lemon Curd</b></div>
-                    <div class="inst_list">
-                     <ol>
-                        <li>In a food processor combine tofu, lemon juice, zest, and granulated sugar and process until smooth and creamy, scraping down the sides as necessary.</li>                        
-                        <li>Add the powdered sugar, cornstarch, and vanilla extract and process again until combined.</li>
-                        <li>Pour into cooled crust and bake for another 25-30 minutes until lemon curd has set.</li>
-                        <li>Let cool at room temperature for 20 minutes and then place in the refrigerator to cool all the way.</li>
-                        <li>Dust with powdered sugar or candied lemon slices just before serving.</li>
-                     </ol>
-                    </div>
-          </div>
-  
+        <div class="rating_bar">
+        <div class="share"> Reviews </div>
+            <div class="review">
+             <div class="review_auth"><strong>Ronald Reagan's review</strong></div>
+             First off, these lemon bars look delicious! Secondly, this kind of abuse is pretty rampant. I would be inclined to contact the celebrity’s team again and tell them to audit their posts, because you recognize some copyrighted content in other posts. If you don’t receive a favorable response, you can let individual bloggers know, or just tag some of them in a social media blast about it. Thank you for being vigilant!
+            <div class="review_posted"><strong>Posted On</strong> February 1, 2019</div>
+            </div>
+            <div class="review">
+             <div class="review_auth"><strong>Barack Obama's review</strong></div>
+             Firstly, these bars look amazing and you know why? The photography!! My mouth was literally watering looking at them. That takes talent to create a picture that makes your mouth water. No way someone else should post your art on their site without your permission. The problem here is that this “star” or the person responding for them, should have looked at every recipe on the site to be sure this didn’t happen anywhere else. Now, lets presume the former employee didn’t inform anyone of where they got the recipes. Knowing what you do, you should either contact the person who apologized and tell them you know these other recipes belong to other bloggers and ask them to remove them as well or contact your friends and let them decided.
+            <div class="review_posted"><strong>Posted On</strong> February 1, 2019</div>
+            </div>
+        </div>              
         </div>
    </body>
 </html>
