--- a/recipe1.html
+++ b/recipe1.html
@@ -45,12 +45,12 @@
         <div class="share"> Reviews </div>
             <div class="review">
              <div class="review_auth"><strong>Ronald Reagan's review</strong></div>
-             First off, these lemon bars look delicious! Secondly, this kind of abuse is pretty rampant. I would be inclined to contact the celebrity’s team again and tell them to audit their posts, because you recognize some copyrighted content in other posts. If you don’t receive a favorable response, you can let individual bloggers know, or just tag some of them in a social media blast about it. Thank you for being vigilant!
+             First off, these lemon bars look delicious!
             <div class="review_posted"><strong>Posted On</strong> February 1, 2019</div>
             </div>
             <div class="review">
              <div class="review_auth"><strong>Barack Obama's review</strong></div>
-             Firstly, these bars look amazing and you know why? The photography!! My mouth was literally watering looking at them. That takes talent to create a picture that makes your mouth water. No way someone else should post your art on their site without your permission. The problem here is that this “star” or the person responding for them, should have looked at every recipe on the site to be sure this didn’t happen anywhere else. Now, lets presume the former employee didn’t inform anyone of where they got the recipes. Knowing what you do, you should either contact the person who apologized and tell them you know these other recipes belong to other bloggers and ask them to remove them as well or contact your friends and let them decided.
+             Firstly, these bars look amazing and you know why? The photography!! My mouth was literally watering looking at them. That takes talent to create a picture that makes your mouth water. 
             <div class="review_posted"><strong>Posted On</strong> February 1, 2019</div>
             </div>
         </div>              
