--- a/menu1.html
+++ b/menu1.html
@@ -9,14 +9,14 @@
         <div id="screen">
 
           <div class="head-bar1" overflow: auto;>
-          <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
+          <a href="restaurant1.html"><i class="material-icons md-3">arrow_back</i></a>
             <h3 class="head_recipes"> menu </h3>
           </div>
 
           <div class="search-result">
 
             <div class="search-result5">
-                <a href="recipe1.html">
+                <a href="recipe1-1.html">
                 <img class = "img" src="images/vegan-lemon-bars-1.jpg" alt="img1">
                 </a>
                 <p class = "text3">Vegan Lemon Bars</p>
