--- a/restaurant.html
+++ b/restaurant.html
@@ -23,7 +23,7 @@
           <div class="search-result">
 
             <div class="search-result1">
-                <a href="front.html">
+                <a href="restaurant1.html">
                 <img class = "img" src="images/restaurant1.jpg" alt="img1">
                 </a>
                 <p class = "text3">The Glass Onion</p>
