--- a/recipes.html
+++ b/recipes.html
@@ -4,24 +4,45 @@
         <link rel="stylesheet" type="text/css" href="ipod.css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="ipod.js"></script>
     </head>
     <body>
-        <div id="screen">
+        <div id="screen" style="overflow: auto;">
 
-          <div class="head-bar1" overflow: auto;>
+          <div class="head-bar1">
           <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
             <h3 class="head_recipes"> Recipes </h3>
           </div>
 
           <div class="search-bar">
             <form class="form-search-bar">
-                <input type="text" placeholder="search for a recipe or restaurant">
+                <input onfocus="searchFocus()" id="search-bar-id" type="text" placeholder="search for a recipe or restaurant">
                 <button type="submit"></button>
             </form>
           </div>
 
+          <div id="filter_id" class="filter">
+            <div><strong>Filter Options</strong></div>
+            <div onclick="expCost()" class="filter_item"><span class="key_down">Cost of Preparation</span><span><i id="cost_prep" class="material-icons">keyboard_arrow_down
+</i></span></div>
+            <form class="cost_check">
+                <input type="checkbox" name="cost1" value="cost1"> $
+                <input type="checkbox" name="cost2" value="cost2"> $$
+                <input type="checkbox" name="cost3" value="cost3"> $$$
+            </form>
+            
+            <div onclick="expIng()" class="filter_item"><span class="key_down">Main Ingredient</span><span><i id="main_ing" class="material-icons">keyboard_arrow_down
+</i></span></div>
+                <form class="ing_check">
+                <input type="checkbox" name="ing" value="Tofu">Tofu
+                <input type="checkbox" name="ing" value="Tempeh">Tempeh
+                <input type="checkbox" name="ing" value="Eggs">Eggs
+            </form>
+            
+            <div></div>
+          </div>
           <div class="search-result">
-
             <div class="search-result1">
                 <a href="recipe1.html">
                 <img class = "img" src="images/vegan-lemon-bars-1.jpg" alt="img1">
