--- a/front.html
+++ b/front.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Album Select</title>
+        <title>VEGI</title>
         <link rel="stylesheet" type="text/css" href="ipod.css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -8,7 +8,7 @@
     <body>
 
         <div id="screen">
-
+            <a href="person-profile.html"><i class="material-icons md-11">account_circle</i></a>
           <h1 id = "my-header">VEGI</h1>
 
 			  <div class="al">
