--- a/menu1.html
+++ b/menu1.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Album Select</title>
+        <title>VEGI</title>
         <link rel="stylesheet" type="text/css" href="ipod.css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
