--- a/recipe1.html
+++ b/recipe1.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Album Select</title>
+        <title>VEGI</title>
         <link rel="stylesheet" type="text/css" href="ipod.css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -33,7 +33,7 @@
           <div class="nutrition_base"><span>Vitamin A</span> <span class="nutrition_right">9.6%</span></div>
           <div class="nutrition_base"><span>Vitamin C</span> <span class="nutrition_right">0.7%</span></div>
           <div class="nutrition_base"><span>Calcium</span> <span class="nutrition_right">0.2%</span></div>
-          <div class="nutrition_base"><span>Iron</span> <span class="nutrition_right">3.6%</span></div>   
+          <div class="nutrition_base"><span>Iron</span> <span class="nutrition_right">3.6%</span></div>
           </div>
         <a style="text-decoration: none;" href="#">
         <div class="rating_bar share">
@@ -50,10 +50,10 @@
             </div>
             <div class="review">
              <div class="review_auth"><strong>Barack Obama's review</strong></div>
-             Firstly, these bars look amazing and you know why? The photography!! My mouth was literally watering looking at them. That takes talent to create a picture that makes your mouth water. 
+             Firstly, these bars look amazing and you know why? The photography!! My mouth was literally watering looking at them. That takes talent to create a picture that makes your mouth water.
             <div class="review_posted"><strong>Posted On</strong> February 1, 2019</div>
             </div>
-        </div>              
+        </div>
         </div>
    </body>
 </html>
