--- a/recipes.html
+++ b/recipes.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Album Select</title>
+        <title>VEGI</title>
         <link rel="stylesheet" type="text/css" href="ipod.css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -31,7 +31,7 @@
                 <input type="checkbox" name="cost2" value="cost2"> $$
                 <input type="checkbox" name="cost3" value="cost3"> $$$
             </form>
-            
+
             <div onclick="expIng()" class="filter_item"><span class="key_down">Main Ingredient</span><span><i id="main_ing" class="material-icons">keyboard_arrow_down
 </i></span></div>
                 <form class="ing_check">
@@ -39,7 +39,7 @@
                 <input type="checkbox" name="ing" value="Tempeh">Tempeh
                 <input type="checkbox" name="ing" value="Eggs">Eggs
             </form>
-            
+
             <div></div>
           </div>
           <div class="search-result">
