--- a/restaurant1.html
+++ b/restaurant1.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Album Select</title>
+        <title>VEGI</title>
         <link rel="stylesheet" type="text/css" href="ipod.css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -23,7 +23,7 @@
           </div>
           <div class="rating_bar">
           <div class="nutrition-facts"><strong>Map</strong></div>
-          
+
           </div>
             <a style="text-decoration: none;" href="menu1.html">
             <div class="rating_bar share">
@@ -43,7 +43,7 @@
              It takes hours to get here, but the foods here are really delicious.
             <div class="review_posted"><strong>Posted On</strong> February 1, 2019</div>
             </div>
-        </div>              
+        </div>
         </div>
    </body>
 </html>
