--- a/recipe1-1.html
+++ b/recipe1-1.html
@@ -10,7 +10,10 @@
           <div class="head-bar1">
               <div class='back_button'>
               <a href="menu1.html"><i class="material-icons md-3">arrow_back</i></a>
-              </div>
+            </div>
+            <div class='account'>
+                <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
+            </div>        
           </div>
 
           <div class="recipe">
