--- a/recipe1.html
+++ b/recipe1.html
@@ -11,13 +11,15 @@
               <div class='back_button'>
               <a href="recipes.html"><i class="material-icons md-3">arrow_back</i></a>
               </div>
+              <div class='account'>
+                <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
+                </div>  
           </div>
 
           <div class="recipe">
            <img class="recipe_image" src="images/vegan-lemon-bars-1.jpg">
            <div class="rec_title"><strong>Vegan Lemon Bars</strong></div>
           </div>
-
           <div class="rating_bar">
           <div class="nutrition-facts"><strong>Nutrition Facts</strong></div>
           <div class="nutrition_base amount"><strong>Amount per Serving</strong></div>
