--- a/restaurant.html
+++ b/restaurant.html
@@ -13,6 +13,9 @@
           <div class="head-bar1" overflow: auto;>
           <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
             <h3 class="head_recipes"> restaurant </h3>
+          <div class='account'>
+            <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
+            </div>
           </div>
 
           <div class="search-bar">
@@ -45,13 +48,12 @@
 
           <div class="search-result">
 
+            <a href="restaurant1.html" style='text-decoration: none;'>
             <div class="search-result1">
-                <a href="restaurant1.html">
                 <img class = "img" src="images/restaurant1.jpg" alt="img1">
-                </a>
                 <p class = "text3">The Glass Onion</p>
             </div>
-
+            </a>
             <br>
             <div class="search-result2">
                 <img class = "img" src="images/restaurant2.jpg" alt="img1">
