--- a/front2.html
+++ b/front2.html
@@ -12,6 +12,9 @@
         <div class="head-bar1" overflow: auto;>
         <a href="front.html"><i class="material-icons md-3">arrow_back</i></a>
         <h3 class="head_recipes"> search </h3>
+        <div class='account'>
+        <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
+        </div>
         </div>
 
 			  <div class="al">
