--- a/menu1.html
+++ b/menu1.html
@@ -10,7 +10,10 @@
 
           <div class="head-bar1" overflow: auto;>
           <a href="restaurant1.html"><i class="material-icons md-3">arrow_back</i></a>
-            <h3 class="head_recipes"> menu </h3>
+            <h3 class="head_recipes">Menu</h3>
+            <div class='account'>
+            <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
+            </div>        
           </div>
 
           <div class="search-result">
