--- a/recipes.html
+++ b/recipes.html
@@ -13,6 +13,10 @@
           <div class="head-bar1">
           <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
             <h3 class="head_recipes"> Recipes </h3>
+            <div class='account'>
+                <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
+            </div>
+        
           </div>
 
           <div class="search-bar">
@@ -43,12 +47,13 @@
             <div></div>
           </div>
           <div class="search-result">
+
+            <a href="recipe1.html" style='text-decoration: none;'>
             <div class="search-result1">
-                <a href="recipe1.html">
                 <img class = "img" src="images/vegan-lemon-bars-1.jpg" alt="img1">
-                </a>
                 <p class = "text3">Vegan Lemon Bars</p>
             </div>
+            </a>
 
             <br>
             <div class="search-result2">
