--- a/recipe1.html
+++ b/recipe1.html
@@ -11,6 +11,7 @@
               <div class='back_button'>
               <a href="recipes.html"><i class="material-icons md-3">arrow_back</i></a>
               </div>
+               <h3 class='head_recipes'>Vegan Lemon Bars</h3>
               <div class='account'>
                 <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
                 </div>  
@@ -18,7 +19,7 @@
 
           <div class="recipe">
            <img class="recipe_image" src="images/vegan-lemon-bars-1.jpg">
-           <div class="rec_title"><strong>Vegan Lemon Bars</strong></div>
+           <div class="rec_title"><strong><a href='' style='text-decoration: none;'>Click Here to Make It</a></strong></div>
           </div>
           <div class="rating_bar">
           <div class="nutrition-facts"><strong>Nutrition Facts</strong></div>
