--- a/recipes.html
+++ b/recipes.html
@@ -16,7 +16,6 @@
             <div class='account'>
                 <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
             </div>
-        
           </div>
 
           <div class="search-bar">
@@ -58,12 +57,12 @@
             <br>
             <div class="search-result2">
                 <img class = "img" src="images/recipe4.jpg" alt="img1">
-                <p class = "text3">tomato curry</p>
+                <p class = "text3">Tomato curry</p>
             </div>
             <br>
             <div class="search-result3">
                 <img class = "img" src="images/recipe2.jpg" alt="img1">
-                <p class = "text3">Vege Noodles</p>
+                <p class = "text3">Veggie Noodles</p>
             </div>
             <br>
             <div class="search-result4">
