--- a/restaurant.html
+++ b/restaurant.html
@@ -12,7 +12,7 @@
 
           <div class="head-bar1" overflow: auto;>
           <a href="front2.html"><i class="material-icons md-3">arrow_back</i></a>
-            <h3 class="head_recipes"> restaurant </h3>
+            <h3 class="head_recipes"> Restaurants </h3>
           <div class='account'>
             <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
             </div>
