--- a/front2.html
+++ b/front2.html
@@ -11,9 +11,12 @@
 
         <div class="head-bar1" overflow: auto;>
         <a href="front.html"><i class="material-icons md-3">arrow_back</i></a>
-        <h3 class="head_recipes"> search </h3>
+        <h3 class="head_recipes"> Search </h3>
         <div class='account'>
         <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
+        </div>
+        <div class='home'>
+        <a href="front.html"><i class="material-icons">home</i></a>
         </div>
         </div>
 
