--- a/recipe1.html
+++ b/recipe1.html
@@ -14,6 +14,9 @@
                <h3 class='head_recipes'>Vegan Lemon Bars</h3>
               <div class='account'>
                 <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
+                </div>
+                <div class='home'>
+                <a href="front.html"><i class="material-icons">home</i></a>
                 </div>  
           </div>
 
