--- a/recipes.html
+++ b/recipes.html
@@ -16,6 +16,9 @@
             <div class='account'>
                 <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
             </div>
+            <div class='home'>
+                <a href="front.html"><i class="material-icons">home</i></a>
+                </div>
           </div>
 
           <div class="search-bar">
