--- a/restaurant1.html
+++ b/restaurant1.html
@@ -11,6 +11,12 @@
               <div class='back_button'>
               <a href="restaurant.html"><i class="material-icons md-3">arrow_back</i></a>
               </div>
+            <div class='account'>
+                <a href="person-profile.html"><i class="material-icons">account_circle</i></a>
+            </div>
+            <div class='home'>
+                <a href="front.html"><i class="material-icons">home</i></a>
+                </div>
           </div>
 
           <div class="recipe">
