--- a/recipe1.html
+++ b/recipe1.html
@@ -22,7 +22,7 @@
 
           <div class="recipe">
            <img class="recipe_image" src="images/vegan-lemon-bars-1.jpg">
-           <div class="rec_title"><strong><a href='' style='text-decoration: none;'>Click Here to Make It</a></strong></div>
+           <div class="rec_title"><strong><a href='make_recipe.html' style='text-decoration: none;'>Click Here to Make It</a></strong></div>
           </div>
           <div class="rating_bar">
           <div class="nutrition-facts"><strong>Nutrition Facts</strong></div>
