--- a/person-profile.html
+++ b/person-profile.html
@@ -28,7 +28,7 @@
           <p class = "text2-3">Location:
           <input class = "form-style1" type="text" name="Location" value="Evanston"></p>
 
-          <input class = "form-style2" type="submit" value="edit">
+          <input class = "form-style2" type="submit" value="save">
           </form>
           <p class = "text2-4"> favorite restaurant </p>
             <div class="search-result1-user-profile">
