--- a/newpost.html
+++ b/newpost.html
@@ -21,23 +21,29 @@
                 </div>
           </div>
 
-          <p class = "newpost-text"> Choose a restaurant or recipe </p>
-          <div class="search-result1">
+          <div class = "newpost-text"> Choose a restaurant or recipe </div>
+          
+          <a href='add_post.html' style='text-decoration: none'>
+          <div class="search-result-post">
               <img class = "img" src="images/restaurant1.jpg" alt="img1">
               <p class = "text3">The Glass Onion</p>
           </div>
-          <p class = "newpost-text"> Add your comment </p>
-          <div class="rating_bar1">
-              <div class="review2">
-               It takes hours to get here, but the foods here are really delicious.
-              </div>
+            </a>
+          <div class="search-result-post">
+              <img class = "img" src="images/restaurant2.jpg" alt="img1">
+              <p class = "text3">He's Not Here Bar</p>
           </div>
 
-          <button type="button" class = "newpost-button"
-            onclick="document.getElementById('msg').innerHTML = 'Submitted, the Administrator is auditing'">
-            Submit</button>
-            <p id="msg" class = "newpost-text1"></p>
-
+          <div class="search-result-post">
+              <img class = "img" src="images/restaurant3.jpg" alt="img1">
+              <p class = "text3">Pita Pan</p>
+          </div>
+  
+          <div class="search-result-post">
+                <img class = "img" src="images/vegan-lemon-bars-1.jpg" alt="img1">
+                <p class = "text3">Vegan Lemon Bars</p>
+            </div>
+            
         </div>
    </body>
 </html>
