--- a/social.html
+++ b/social.html
@@ -29,7 +29,7 @@
             </div>
             </a>
 
-            <a href="restaurant1.html" style='text-decoration: none;'>
+            <a href="restaurant1-social.html" style='text-decoration: none;'>
             <div class="social1">
                 <img class = "img" src="images/restaurant1.jpg" alt="img1">
                 <!--<p class = "text-social1">The Glass Onion</p>-->
