--- a/menu1-social.html
+++ b/menu1-social.html
@@ -22,7 +22,7 @@
           <div class="search-result">
 
             <div class="search-result5">
-                <a href="recipe1-1.html">
+                <a href="recipe1-1-social.html">
                 <img class = "img" src="images/vegan-lemon-bars-1.jpg" alt="img1">
                 </a>
                 <p class = "text3">Vegan Lemon Bars</p>
