--- a/front.html
+++ b/front.html
@@ -8,7 +8,7 @@
     <body>
 
         <div id="screen">
-            <a href="person-profile.html"><i class="material-icons md-11">account_circle</i></a>
+            <a href="login.html"><i class="material-icons md-11">account_circle</i></a>
           <h1 id = "my-header">VEGI</h1>
 
 			  <div class="al">
